add feature scenarios management
